intel/bench_214/extr_.reactosdlldirectxwinewined3dstateblock.c_stateblock_init_contained_states_with_main/log.txt
bench_214/extr_.reactosdlldirectxwinewined3dstateblock.c_stateblock_init_contained_states_with_main/extr_.reactosdlldirectxwinewined3dstateblock.c_stateblock_init_contained_states_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
